# Number-Solver

./: CMakeLists.txt  NumberSolver.cpp  NumberSolver.h  PA 10 Plan.docx  README.docx  Stack_t.cpp  Stack_t.h  longestRun-in.txt  numgrid.txt  project10.cpp
